--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Tanya Raj</h1>
+            <div><a href="mailto:your.email@example.com">tanyaraj381@gamil.com</a></div>
             
             <section class="box">
                 <h2>
@@ -31,12 +31,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Manipal University Jaipur
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Computer Science Engineering</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>GPA: 8.8</li>
+                        <li>2022-2024</li>
                     </ul>
                 </div>
             </section>
@@ -63,8 +63,8 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Public Speaking</li>
+                    <li>Team Management</li>
                 </ul>
             </section>
             <section class="box">
@@ -73,10 +73,10 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>Zest IT</h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>Web Developmet Intern</li>
+                    <li></li>
                 </ul>
             </section>
             <section class="box">
@@ -89,7 +89,7 @@
                 <div>This was a great hack!</div>
                 <ul>
                     <li>Cool technology used</li>
-                    <li>Prize won</li>
+                    <li>Won prizes and certificates</li>
                 </ul>
             </section>
         </article>
